--- a/assets_site/partials/navigation/global-navigation.html
+++ b/assets_site/partials/navigation/global-navigation.html
@@ -1,6 +1,6 @@
 <ul id="local-nav" class="dropdown menu float-left" data-description="navigational">
   <li class="{{#ifequal location '/'}}active{{/ifequal}}"><a href="{{{rel-root}}}"><i class="icon icon-generic" data-icon="H"></i> Overview</a></li>
-  <li class="{{#ifequal location '/general'}}active{{/ifequal}}"><a href="{{{rel-root}}}general"><i class="icon icon-generic" data-icon="i"></i> Universal princiciples</a></li>
+  <li class="{{#ifequal location '/general'}}active{{/ifequal}}"><a href="{{{rel-root}}}general"><i class="icon icon-generic" data-icon="i"></i> Universal principles</a></li>
   <li class="{{#ifequal location '/general/templates'}}active{{/ifequal}}"><a href="{{{rel-root}}}general/templates"><i class="icon icon-generic" data-icon=";"></i> Templates</a></li>
   <li class="{{#ifequal location '/websites'}}active{{/ifequal}} {{#ifequal pagetype 'meta-pattern'}}active{{/ifequal}}"><a href="{{{rel-root}}}websites/"><i class="icon icon-generic" data-icon="N"></i> Create websites</a></li>
   <li class="{{#ifequal title 'Web patterns'}}active{{/ifequal}}"><a href="{{{rel-root}}}websites/patterns/"><i class="icon icon-generic" data-icon=";"></i> Web patterns</a></li>
